<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditeProfile"
    android:background="@color/darkBlue">
    <!-- Back Button -->
    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/back"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Title "Profile" -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/profile"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ivBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivBack"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Profile Section Title -->
    <TextView
        android:id="@+id/tvProfileDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="8dp"
        android:text="@string/personal_details"
        android:textColor="#9E9E9E"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <!-- Username Row -->

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/user_name"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvProfileDetails" />

    <!-- Profile Photo Row -->

    <TextView
        android:id="@+id/tvUserNameValue"
        android:layout_width="213dp"
        android:layout_height="55dp"
        android:padding="16dp"
        android:text="6sfy9c68zf"
        android:textColor="#4BA3FD"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvUserName"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileDetails"
        tools:ignore="HardcodedText,VisualLintBounds" />

    <!-- Height Row -->

    <TextView
        android:id="@+id/tvProfilePhoto"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/profile_photo"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/ivProfilePhoto"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName" />

    <ImageView
        android:id="@+id/ivProfilePhoto"
        android:layout_width="70dp"
        android:layout_height="52dp"
        android:layout_marginEnd="116dp"
        android:contentDescription="TODO"
        android:src="@drawable/user_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserNameValue"
        tools:ignore="ContentDescription,HardcodedText" />

    <TextView
        android:id="@+id/tvHeight"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/budget"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProfilePhoto" />

    <!-- Gender Row -->

    <TextView
        android:id="@+id/tvHeightValue"
        android:layout_width="215dp"
        android:layout_height="55dp"
        android:padding="16dp"
        android:text="@string/rs_300000"
        android:textColor="#4BA3FD"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvHeight"
        app:layout_constraintTop_toBottomOf="@+id/ivProfilePhoto"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:padding="16dp"
        android:text="@string/currency"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeight" />

    <!-- Email Row -->

    <TextView
        android:id="@+id/tvGenderValue"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/rs"
        android:textColor="#4BA3FD"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvGender"
        app:layout_constraintTop_toBottomOf="@+id/tvHeightValue" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:padding="16dp"
        android:text="@string/email2"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tvEmailValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGender" />

    <!-- Country Row -->
    <TextView
        android:id="@+id/tvEmailValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/example_example_com"
        android:textColor="#4BA3FD"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvGenderValue" />

    <TextView
        android:id="@+id/tvCountry"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/country"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tvCountryValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

    <TextView
        android:id="@+id/tvCountryValue"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/sri_lanka"
        android:textColor="#4BA3FD"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvCountry"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailValue" />
</androidx.constraintlayout.widget.ConstraintLayout>